Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-6879] runtime crash on latest swift 4.1 (possibly conditional conformance related) #49428

Closed
swift-ci opened this issue Jan 31, 2018 · 5 comments
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software regression run-time crash Bug → crash: Swift code crashed during execution swift 4.1

Comments

@swift-ci
Copy link
Collaborator

Previous ID SR-6879
Radar rdar://problem/37086144
Original Reporter tannernelson (JIRA User)
Type Bug
Status Resolved
Resolution Done

Attachment: Download

Environment

Swift Version: 4.1-DEVELOPMENT-SNAPSHOT-2018-01-30-a

Xcode Version: 9.2 (happens on 9.3 as well)

macOS Version: 10.12 (happens on 10.13 as well)

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, 4.1Regression, RunTimeCrash
Assignee @aschwaighofer
Priority Medium

md5: e0ea698ae3734cb92db8f5943d4435bd

Issue Description:

Runtime crash: Thread 1: EXC_BAD_ACCESS (code=EXC_I386_GPFLT)

Running `swift test` on the code in this branch vapor/fluent#367 crashes on Swift 4.1.

We're also seeing a bad access crash on some other repos using 4.1. I can report those as separate issues if that would help.

@swift-ci
Copy link
Collaborator Author

Comment by tanner0101 (JIRA)

You can see the test failing on `swift-4.1-branch` on Ubuntu 16.04 as well:

https://circleci.com/gh/vapor/fluent/659?utm_campaign=vcs-integration-link&utm_medium=referral&utm_source=github-build-link

#!/bin/bash -eo pipefail
swift test
Compile Swift Module 'SQLiteTests' (2 sources)
Compile Swift Module 'FluentTests' (1 sources)
Compile Swift Module 'FluentPackageTests' (1 sources)
Linking ./.build/x86_64-unknown-linux/debug/FluentPackageTests.xctest
Test Suite 'All tests' started at 2018-01-31 17:41:54.631
Test Suite 'debug.xctest' started at 2018-01-31 17:41:54.631
Test Suite 'SQLiteBenchmarkTests' started at 2018-01-31 17:41:54.632
Test Case 'SQLiteBenchmarkTests.testSchema' started at 2018-01-31 17:41:54.632
Test Case 'SQLiteBenchmarkTests.testSchema' passed (0.007 seconds)
Test Case 'SQLiteBenchmarkTests.testModels' started at 2018-01-31 17:41:54.639
Test Case 'SQLiteBenchmarkTests.testModels' passed (0.013 seconds)
Test Case 'SQLiteBenchmarkTests.testRelations' started at 2018-01-31 17:41:54.652
Test Case 'SQLiteBenchmarkTests.testRelations' passed (0.03 seconds)
Test Case 'SQLiteBenchmarkTests.testTimestampable' started at 2018-01-31 17:41:54.682
Test Case 'SQLiteBenchmarkTests.testTimestampable' passed (0.008 seconds)
Test Case 'SQLiteBenchmarkTests.testTransactions' started at 2018-01-31 17:41:54.690
Test Case 'SQLiteBenchmarkTests.testTransactions' passed (0.027 seconds)
Test Case 'SQLiteBenchmarkTests.testChunking' started at 2018-01-31 17:41:54.717
Test Case 'SQLiteBenchmarkTests.testChunking' passed (0.973 seconds)
Test Case 'SQLiteBenchmarkTests.testAutoincrement' started at 2018-01-31 17:41:55.690
Test Case 'SQLiteBenchmarkTests.testAutoincrement' passed (0.006 seconds)
Test Case 'SQLiteBenchmarkTests.testCache' started at 2018-01-31 17:41:55.696
Exited with signal code 11
Exited with code 1

@swift-ci
Copy link
Collaborator Author

Comment by tanner0101 (JIRA)

Looks like simply moving the `Self.` calls out of the closure fixes the issue.

@swift-ci
Copy link
Collaborator Author

Comment by tanner0101 (JIRA)

This commit fixed the crash: vapor/fluent@0f50f01

@DougGregor
Copy link
Member

@swift-ci create

@aschwaighofer
Copy link
Member

Fixed by: #14411

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@AnthonyLatsis AnthonyLatsis added the crash Bug: A crash, i.e., an abnormal termination of software label Dec 12, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software regression run-time crash Bug → crash: Swift code crashed during execution swift 4.1
Projects
None yet
Development

No branches or pull requests

4 participants