lib/Sema/TypeCheckDecl.cpp
@@ -4354,9 +4354,8 @@ public:
     TypeResolutionOptions options;
     options |= TypeResolutionFlags::SubscriptParameters;
 
-    isInvalid |= TC.typeCheckParameterList(SD->getIndices(), SD,
-                                           options,
-                                           resolver);
+    isInvalid |= TC.typeCheckParameterList(SD->getIndices(), SD, options,
+                                           resolver, false);
 
     if (isInvalid || SD->isInvalid()) {
       SD->setInterfaceType(ErrorType::get(TC.Context));
@@ -4906,8 +4905,8 @@ public:
                              GenericTypeResolver &resolver) {
     bool hadError = false;
     for (auto paramList : fd->getParameterLists()) {
-      hadError |= TC.typeCheckParameterList(paramList, fd,
-                                            TypeResolutionOptions(), resolver);
+      hadError |= TC.typeCheckParameterList(
+          paramList, fd, TypeResolutionOptions(), resolver, fd->hasBody());
     }
 
     return hadError;
