test/multifile/Inputs/require-layout-generic-class.swift
@@ -1,0 +1,9 @@
+public class Base<T> {
+  var t: T
+  init(_ a: T) {
+    t = a
+  }
+}
+
+public class Sub<T> : Base<T> {
+}
